<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, HelloWorldActivity!</string>
    <string name="app_name">Mix and Match</string>
    <string name="matchwunsch_button">Matchwunsch bekanntgeben</string>
    <string name="matchsenden_button">Matchwunsch senden</string>
    <string name="matchempfangen_button">Matchwunsch empfangen</string>
    <string name="meineanfragen_button">Meine Anfragen</string>
    <string name="emailsenden_button">Email senden</string>
    <string name="name_feld">Name</string>
    <string name="teilnehmer_feld">Teilnehmer</string>
    <string name="email_feld">eMail</string>
    <string name="ort_feld">Ort</string>
    <string name="datum_feld">Datum</string>
    <string name="zeit_feld">Zeit</string>
    <string name="date_button">Datum auswählen</string>
    <string name="time_button">Zeit auswählen</string>
    <string name="location_button">Karte anzeigen</string>
    <string name="base_uri_test">http://192.168.0.250</string>
    <!--string name="base_uri">http://ec2-46-137-12-115.eu-west-1.compute.amazonaws.com/api</string-->
    <string name="base_uri">http://192.168.43.81:8080</string>
    <string name="uri_requests">/requests</string>
    <string name="uri_locations">/locations</string>
    
    <string name="location_service_started">Location service started.</string>
    <string name="location_service_stopped">Location service stopped.</string>
    <string name="location_service_created">Location service created.</string>
    <string name="local_service_connected">Location service connected.</string>
    <string name="local_service_disconnected">Location service disconnected.</string>
    <string name="error_name_missing">Bitte Namen eingeben.</string>
     <string name="error_mail_missing">Bitte Email eingeben.</string>
    <string name="error_ok">OK</string>
    <string name="ort_wert">Standort auswählen</string>
    <string-array name="location_list">
    	<item>HVU, Unterföhring</item>
    	<item>BVB, Unterföhring</item>
    	<item>Mace, Unterföhring</item>
    	<item>Kistenpfennig, Schwabing</item>
    	<item>Al Pacino, Schwabing</item>
    	<item>HV, Schwabing</item>
    	</string-array>
    	
    <string name="error_tech_locationservice">Fehler beim aktualisieren der Lokationen.</string>
    <string name="error_tech_requestservice">Fehler beim aktualisieren der Essensanfragen.</string>
    <string name="save">Speichern</string>
    <string name="name">Name</string>
    <string name="email">EMail-Adresse</string>
    <string name="userid">User-ID</string>
    <string name="refresh">aktualisieren</string>
    <string name="delete">löschen</string>
</resources>
