<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_gravity="bottom">
	<ImageView android:src="@drawable/logo"
		android:layout_height="wrap_content" android:id="@+id/logo"
		android:layout_width="fill_parent" 
		android:paddingTop="5px"
		android:paddingBottom="10px" 
		android:layout_gravity="top">
	</ImageView>
	
	<Button android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:id="@+id/buttonMatchwunschBekanntgeben"
		android:text="@string/matchwunsch_button"></Button>
	<Button android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:id="@+id/buttonMatchEmpfangen"
		android:text="@string/matchempfangen_button"></Button>
	<Button android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:id="@+id/buttonMeineAnfragen"
		android:text="@string/meineanfragen_button"></Button>

</LinearLayout>
